--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Command</title>
+    <meta http-equiv="X-UA-Compatible"
+            content="IE =edge">
+      <meta name="viewport"
+            content="width =device-width, initial-scale=1.0">
+    <title>Notes</title>
 </head>
 <body>
     <div id="dv"> </div>
