--- a/notes.html
+++ b/notes.html
@@ -19,6 +19,10 @@
     document.addEventListener("click", (event) => processData(prompt("data")));
 
     processData = (text) => {
+        if (!text) {
+            return
+        }
+        
         let all = text.split(" ");
         let action = all[0];
         let content = text.substring(action.length);
