--- a/notes.html
+++ b/notes.html
@@ -2,11 +2,10 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible"
-            content="IE =edge">
-      <meta name="viewport"
-            content="width =device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE =edge">
+    <meta name="viewport" content="width =device-width, initial-scale=1.0">
     <title>Notes</title>
+    <style> body { background-color: black; color:white } </style>
 </head>
 <body>
     <div id="dv"> </div>
