--- a/notes.html
+++ b/notes.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE =edge">
     <meta name="viewport" content="width =device-width, initial-scale=1.0">
     <title>Notes</title>
-    <style> body { background-color: black; color:white } </style>
+    <style> body { background-color: black; color:white; font-family: "Courier New" } </style>
 </head>
 <body>
     <div id="dv"> </div>
