--- a/notes.html
+++ b/notes.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE =edge">
     <meta name="viewport" content="width =device-width, initial-scale=1.0">
     <title>Notes</title>
-    <style> body { background-color: black; color:white; font-family: "Courier New" } </style>
+    <style> body { background-color: black; color:white; font-family: "Courier New" } input { width: 100%; } </style>
 </head>
 <body>
+    <input type="text" id="tb" />
     <div id="dv"> </div>
 </body>
 <script>
