--- a/notes.html
+++ b/notes.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE =edge">
     <meta name="viewport" content="width =device-width, initial-scale=1.0">
     <title>Notes</title>
-    <style> body { background-color: black; color:white; font-family: "Courier New" } input { width: 100%; background-color: black; color:white; font-family: "Courier New" } </style>
+    <style> body { background-color: black; color:white; font-family: "Courier New" } input { width: 100%; background-color: black; color:white; font-family: "Courier New"; border: none; } </style>
 </head>
 <body>
     <input type="text" id="tb" />
@@ -18,7 +18,7 @@
 
     document.addEventListener("click", (event) => document.getElementById("tb").focus());
 
-    document.getElementById("tb").addEventListener("keyup", (event) => if (event.keyCode == 13) processData(document.getElementById("tb").value); );
+    document.getElementById("tb").addEventListener("keyup", (event) => { if (event.keyCode == 13) processData(document.getElementById("tb").value); } );
 
     processData = (text) => {
         if (!text) {
