--- a/notes.html
+++ b/notes.html
@@ -8,7 +8,8 @@
     <style> body { background-color: black; color:white; font-family: "Courier New" } input { width: 100%; background-color: black; color:white; font-family: "Courier New"; border: none; } </style>
 </head>
 <body>
-    <input type="text" id="tb" />
+    <input type="text" id="tb" autocapitalize="none" />
+    <br />
     <div id="dv"> </div>
 </body>
 <script>
