--- a/notes.html
+++ b/notes.html
@@ -5,7 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE =edge">
     <meta name="viewport" content="width =device-width, initial-scale=1.0">
     <title>Notes</title>
-    <style> body { background-color: black; color:white; font-family: "Courier New" } input { width: 100%; background-color: black; color:white; font-family: "Courier New"; border: none; outline: none; } </style>
+    <style> 
+        body
+        {
+            background-color: black;
+            color: white;
+            font-family: "Courier New";
+            font-size: large;
+        }
+        input
+        {
+            width: 100%;
+            background-color: black;
+            color: white;
+            font-family: "Courier New";
+            border: none;
+            outline: none;
+        }
+    </style>
 </head>
 <body>
     <input type="text" id="tb" autocapitalize="none" />
