--- a/notes.html
+++ b/notes.html
@@ -21,6 +21,7 @@
             font-family: "Courier New";
             border: none;
             outline: none;
+            font-size: large;
         }
     </style>
 </head>
