--- a/notes.html
+++ b/notes.html
@@ -85,7 +85,7 @@
             text: text
         });
         saveData();
-        showData("done", true);
+        showData("added", true);
     }
 
     doList = () => {
