--- a/notes.html
+++ b/notes.html
@@ -74,10 +74,11 @@
 
     doAdd = (text) => {
         let pattern = /#\S+/g;
+        let defaultTag = "#note";
         let tags = text.match(pattern);
-        text = text.replace(pattern, "");
         if ((tags || []).filter(t => t.length > 0) == 0) {
-            tags = ["#note"];
+            tags = [defaultTag];
+            text = `${text} ${defaultTag}`;
         }
         data.push({
             date: new Date(),
@@ -136,7 +137,7 @@
                 message = `${message}${isoToString(l.date)}\n`;
                 currDate = isoToString(l.date);
             }
-            message = `${message}${l.tags}\n${l.text}\n\n`;
+            message = `${message}${l.text}\n\n`;
         });
         showData(message);
     }
