--- a/notes.html
+++ b/notes.html
@@ -33,7 +33,7 @@
 <script>
     var data = [];
 
-    window.addEventListener("load", () => loadData(); showToday(););
+    window.addEventListener("load", () => { loadData(); showToday(); });
 
     document.addEventListener("click", (event) => document.getElementById("tb").focus());
 
