--- a/notes.html
+++ b/notes.html
@@ -23,6 +23,9 @@
             outline: none;
             font-size: large;
         }
+        hr {
+            border: 1px solid grey;
+        }
     </style>
 </head>
 <body>
