--- a/notes.html
+++ b/notes.html
@@ -6,15 +6,13 @@
     <meta name="viewport" content="width =device-width, initial-scale=1.0">
     <title>Notes</title>
     <style> 
-        body
-        {
+        body {
             background-color: black;
             color: white;
             font-family: "Courier New";
             font-size: large;
         }
-        input
-        {
+        input {
             width: 100%;
             background-color: black;
             color: white;
