--- a/notes.html
+++ b/notes.html
@@ -22,7 +22,7 @@
             font-size: large;
         }
         hr {
-            border: 1px solid grey;
+            border: 0.5px solid #cccccc;
         }
     </style>
 </head>
@@ -91,7 +91,7 @@
             text: text
         });
         saveData();
-        showMessage(text);
+        showData(text);
     }
 
     doList = () => {
