--- a/notes.html
+++ b/notes.html
@@ -22,7 +22,7 @@
             font-size: large;
         }
         hr {
-            border: 0.5px solid #cccccc;
+            border: 0.1px solid #111111;
         }
     </style>
 </head>
