--- a/notes.html
+++ b/notes.html
@@ -81,12 +81,19 @@
         let pattern = /#\S+/g;
         let defaultTag = "#note";
         let tags = text.match(pattern);
+        let dates = text.match(/@\S+/g);
+        let date = new Date();
         if ((tags || []).filter(t => t.length > 0) == 0) {
             tags = [defaultTag];
             text = `${text} ${defaultTag}`;
         }
+
+        if ((dates || []).filter(d => d.length > 0) > 1) {
+            date = new Date(dates[0].substring(1));
+        }
+        
         data.push({
-            date: new Date(),
+            date: date,
             tags: tags,
             text: text
         });
