--- a/notes.html
+++ b/notes.html
@@ -136,9 +136,9 @@
                     }
                     
                     let today = new Date();
-                    let to = new Date(today.getYear(), today.getMonth(), today.getDate());
+                    let to = new Date(today.getFullYear(), today.getMonth(), today.getDate());
                     let mode = condition.substring(condition.length-1);
-                    let number = condition.substring(0, condition.length-1);
+                    let number = condition.substring(0, condition.length-1)-1;
                     let from = to;
                     switch (mode) {
                         case "d": {
