--- a/notes.html
+++ b/notes.html
@@ -173,7 +173,7 @@
     doClear = () => showData("");
 
     doTags = () => {
-        let tags = data.map(d.tags);
+        let tags = data.map(d => d.tags);
     }
 
     showList = (list) => {
