--- a/notes.html
+++ b/notes.html
@@ -176,7 +176,7 @@
         let tags2 = data.map(d => d.tags);
         let tags = [];
         data.foreach(d => {
-            tags = [...tags ...d.tags];
+            tags = [...tags, ...d.tags];
         });
         tags = [... new Set(tags)]
         tags.sort();
