--- a/notes.html
+++ b/notes.html
@@ -107,7 +107,7 @@
         }
         
         switch (content) {
-            case "notes: {
+            case "notes": {
                 showList(data);
                 break;
             }
