--- a/notes.html
+++ b/notes.html
@@ -182,8 +182,9 @@
                         condition = "1d";
                     }
                     
-                    let from  = new Date();
-                    from.setDate(from .getDate() + 1);
+                    let today  = new Date();
+                    today.setDate(today .getDate() + 1);
+                    let from = new Date(today.getFullYear(), today.getMonth(), today.getDate());
                     let mode = condition.substring(condition.length-1);
                     let number = condition.substring(0, condition.length-1)-1;
                     let to = new Date(from .getFullYear(), from.getMonth(), from.getDate());
