--- a/log.html
+++ b/log.html
@@ -110,7 +110,7 @@
         let toAdd = { date: date, tags: tags, text: text };
         data.push(toAdd);
         saveData();
-        showList({toAdd]);
+        showList([toAdd]);
     }
 
     doList = (content) => {
