--- a/log.html
+++ b/log.html
@@ -25,8 +25,9 @@
             border: 0.1px solid #555555;
         }
         span {
-            color: #555555;
+            color: #aaaaaa;
             font-style: italic;
+            display: block;
         }
     </style>
 </head>
@@ -34,7 +35,6 @@
     <input type="text" id="tb" autocapitalize="none" />
     <hr />
     <span id="spn"></span>
-    <br />
     <div id="dv"></div>
     <input style="display:none" type="file" id="fl" />
 </body>
